--- a/index.html
+++ b/index.html
@@ -275,12 +275,6 @@
     <div class="row mb-5">
       <div class="col-md-4 text-center">
         <p class="mb-4">
-          <span class="icon-room d-block h4 text-primary"></span>
-          <span>123 Serenity Lane, Peaceful Town, Harmony State, USA</span>
-        </p>
-      </div>
-      <div class="col-md-4 text-center">
-        <p class="mb-4">
           <span class="icon-phone d-block h4 text-primary"></span>
           <a href="#">+1 555 1234 567</a>
         </p>
@@ -288,7 +282,7 @@
       <div class="col-md-4 text-center">
         <p class="mb-0">
           <span class="icon-mail_outline d-block h4 text-primary"></span>
-          <a href="#">contact@christiancovenant.com</a>
+          <a href="#">christiancovenantcompass@gmail.com</a>
         </p>
       </div>
     </div>
