--- a/services.html
+++ b/services.html
@@ -267,6 +267,13 @@
                 <p><a href="https://www.ipcc.ch/" class="btn btn-primary text-white" target="_blank">Visit IPCC</a></p>
               </div>
             </div>
+            <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+              <div class="resource">
+                <h3>Survivor Resources</h3>
+                <p>Helping Survivors is a group dedicated to supporting recovery, learning, and strengthening individuals affected by sexual violence and mistreatment.</p>
+                <p><a href="https://www.helpingsurvivors.org/resources/" class="btn btn-primary text-white" target="_blank">Visit Helping Survivors</a></p>
+              </div>
+            </div>
             <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200">
               <div class="resource">
                 <h3>Human Rights</h3>
